# cwm

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MODEL_CARD.md  PROMPTING_GUIDE.md  README.md  download_pytorch.sh  environment.yaml  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
cwm/checkpoint/: checkpointer.py  stateful_utils.py
cwm/common/: environment.py  params.py
cwm/data/: dataset.py
cwm/data/ops/: chain.py  filter_map.py  mix.py
cwm/data/srcs/: list.py  range.py
cwm/exec/math/: compare.py  compare_runner.py  math_process.py  math_verify_runner.py  unicode_to_latex.py
cwm/fastgen/: api.py  forward.py  generate.py
cwm/fastgen/kernels/: paged_memcpy.py  rmsnorm.py  rope.py
cwm/fastgen/utils/: cache.py  collectives.py  iset.py  loading.py  metrics.py  misc.py  sampling.py  tune.py  weights.py
cwm/logging/: logger.py  metrics.py
cwm/model/: parallelize_transformer.py  transformer.py
cwm/rl/: README.md
cwm/rl/envs/: README.md  __init__.py  api.py  config.py  dialog.py  outcomes.py  prompts.py  rewards.py  tool_executor.py
cwm/rl/lib/: datatypes.py  dump_traj.py
cwm/rl/swerl/: README.md  __init__.py  common.py  default_backends.py  (+6 more)
cwm/text/: datatypes.py  tokenizers.py
cwm/utils/: distributed.py
demos/: README.md  cwmdbg.ipynb  cwmdbg.py
evals/: README.md  args.py  main.py
evals/configs/: eval_lcb.yaml  eval_math.yaml  eval_sbv.yaml  testgen_sbv.yaml
evals/scripts/: download_lcb.py  download_math.py
serve/: README.md  fgserve.py  openai_api.py  tools.py
serve/configs/: cwm.yaml
(+41 files in other folders)
